--- a/tmall/html/index.html
+++ b/tmall/html/index.html
@@ -19,6 +19,7 @@
           <ul class="header-list">
               <li class="list-arrow">
                   <a href="#">我的淘宝</a>
+                  <span class="arrow"></span>
               <ul class="sub-list sub-list-tb">
                   <li><a href="#">已买到的宝贝</a></li>
                   <li><a href="#">已卖出的宝贝</a></li>
